# ilenia

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.h.in  configure  configure.in  ilenia-notifier.prj  svn-commit.4.tmp  svn-commit.tmp
conf/: Makefile.am  Makefile.in  alias  clc.cvsup.in  favoritepkgmk  favoriterepo  favoriteversion  ilenia.conf  ilenia.rc
doc/: Makefile.am  Makefile.in  ilenia.8.in
ilenia/: AUTHORS  ChangeLog  ChangeLog.CVS  ChangeLog.SVN  INSTALL  NEWS  configure.in  ilenia.py  setup.py
ilenia-notifier/: ChangeLog  configure.in  ilenia-notifier.prj  notifier.py
ilenia-notifier/ilenia-notifier/: notifier.py
ilenia-notifier/lib/: details.py
ilenia-notifier/src/: Makefile.am  checkupdates.c  checkupdates.h  drawtrayicon.c  drawtrayicon.h  main.c  update-repos.c
ilenia/conf/: Makefile.am  crux-it.cvsup.in  crux.cvsup.in  favoriterepo  favoriteversion  ilenia.conf
ilenia/doc/: ilenia.8.in
ilenia/ilenia/: ilenia.py
ilenia/ilenia/lib/: confront.py  download.py  favorite.py  notify.py  option.py  packages.py  prettyprint.py  progdownload.py  repos.py
ilenia/src/: Makefile.am  aggiorna.c  aggiorna.h  aliaslist.c  aliaslist.h  confront.c  confront.h  confronto.c  confronto.h  db.c  db.h  dependencies.c  deplist.c  deplist.h  dipendenze.c  dipendenze.h  ilenia.h  ileniarc.c  list.c  list.h  lspacchetti.c  lspacchetti.h  lspkgs.c  lspkgs.h  lsports.c  lsports.h  main.c  manipola.c  manipola.h  manipulator.c  manipulator.h  output.c  output.h  pkglist.c  pkglist.h  pkgutils.c  pkgutils.h  repolist.c  update.c  utils.c  (+3 more)
po/: POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  aggiorna.c  aggiorna.h  aliaslist.c  aliaslist.h  cache.c  cache.h  conf.c  conf.h  confront.c  confront.h  confronto.c  confronto.h  cvs.c  cvs.h  db.c  db.h  dbutils.c  dbutils.h  dependencies.c  dependencies.h  deplist.c  deplist.h  dict.c  dict.h  dipendenze.c  dipendenze.h  drawtrayicon.c  drawtrayicon.h  driver.c  driver.h  exec.c  exec.h  favoritepkgmk.c  favoritepkgmk.h  file.c  file.h  hash.c  (+57 more)
