#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(ilenia, 3.0, Giuseppe Coviello <cjg@cruxppc.org>)
AM_INIT_AUTOMAKE(ilenia, 3.0)
AC_CONFIG_SRCDIR([src/dict.c])
AC_CONFIG_HEADER([config.h])

# Conditional building
AC_ARG_ENABLE(debug,
        [  --enable-debug            Turn on debugging ], 
        [case "${enableval}" in
              yes) debug=true ;;
              no) debug=false ;;
              *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
        esac], 
        [debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)
AC_ARG_ENABLE(bad_maintainers,
        [  --disable-bad-maintainers Turn off the support for the nasty habit
                                     of adding shell commands in version 
                                     variables], 
        [case "${enableval}" in
              yes) bad_maintainers=true ;;
              no) bad_maintainers=false ;;
              *) AC_MSG_ERROR(bad value ${enableval} for --disable-bad-maintainers) ;;
        esac], 
        [bad_maintainers=true])
AM_CONDITIONAL(BAD_MAINTAINERS, test x$bad_maintainers = xtrue)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h string.h strings.h fcntl.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_REPLACE_FNMATCH
AC_TYPE_SIZE_T
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_FUNC_ERROR_AT_LINE
AC_CHECK_FUNCS([memset strcasecmp strchr strrchr strdup strstr strverscmp dup2])

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 conf/Makefile
		 doc/Makefile])

AC_OUTPUT
