## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = ilenia

ilenia_SOURCES = \
	main.c\
	aggiorna.c\
	aggiorna.h\
	confronto.c\
	confronto.h\
	db.c\
	db.h\
	lspacchetti.c\
	lspacchetti.h\
	lsports.c\
	lsports.h\
	manipola.c\
	manipola.h\
	output.c\
	output.h\
	pkgutils.c\
	pkgutils.h\
	vercmp.c\
	vercmp.h\
	dipendenze.c\
	dipendenze.h\
	ilenia.h\
	deplist.c\
	deplist.h

ilenia_LDFLAGS = 

ilenia_LDADD = 

