## Process this file with automake to produce Makefile.in

INCLUDES =

AM_CFLAGS =\
	-Wall\
	-g\
	-D_GNU_SOURCE\
	-D_SYSUPNG

bin_PROGRAMS = ilenia

ilenia_SOURCES = \
	main.c\
	update.c\
	update.h\
	confront.c\
	confront.h\
	pkglist.c\
	pkglist.h\
	lspkgs.c\
	lspkgs.h\
	lsports.c\
	lsports.h\
	manipulator.c\
	manipulator.h\
	output.c\
	output.h\
	pkgutils.c\
	pkgutils.h\
	vercmp.c\
	vercmp.h\
	dependencies.c\
	dependencies.h\
	ilenia.h\
	deplist.c\
	deplist.h\
	ileniarc.c\
	repolist.h\
	repolist.c\
	aliaslist.h\
	aliaslist.c\
	utils.h\
	utils.c\
	list.h\
	list.c\
	favoritepkgmk.h\
	favoritepkgmk.c\
	dbutils.h\
	dbutils.c

ilenia_LDFLAGS = 

ilenia_LDADD = -ldb

