## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(PACKAGE_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = ilenia-notifier

ilenia_notifier_SOURCES = \
	main.c\
	eggtrayicon.c\
	eggtrayicon.h\
	drawtrayicon.c\
	drawtrayicon.h

ilenia_notifier_LDFLAGS = 

ilenia_notifier_LDADD =  \
	$(PACKAGE_LIBS)

