## Process this file with automake to produce Makefile.in

INCLUDES =

AM_CFLAGS =\
	-Wall\
	-g\
	-D_GNU_SOURCE

bin_PROGRAMS = ilenia

ilenia_SOURCES = \
	main.c\
	update.c\
	update.h\
	confront.c\
	confront.h\
	pkglist.c\
	pkglist.h\
	lspacchetti.c\
	lspacchetti.h\
	lsports.c\
	lsports.h\
	manipola.c\
	manipola.h\
	output.c\
	output.h\
	pkgutils.c\
	pkgutils.h\
	vercmp.c\
	vercmp.h\
	dipendenze.c\
	dipendenze.h\
	ilenia.h\
	deplist.c\
	deplist.h\
	ileniarc.c\
	repolist.h\
	repolist.c\
	aliaslist.h\
	aliaslist.c

ilenia_LDFLAGS = 

ilenia_LDADD = 

